fixed margin visual bug on mobile devcs

--- a/frontend/src/app/projects/pages/projects-list-page/projects-list-page.component.css
+++ b/frontend/src/app/projects/pages/projects-list-page/projects-list-page.component.css
@@ -1,5 +1,7 @@
 project-card {
   display: flex;
   margin-top: 5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
   justify-content: center;
 }
